Fix a bug where a file name was expected but the XML source was a stream.
Some PMC documents do not contain their own ID. One measure to solve this was to use the file name or URI of the source file. However, when reading from the database, there is no such file. Instead, the file name is given by the primary key.